--- a/tienda.html
+++ b/tienda.html
@@ -23,32 +23,30 @@
         <img src="Img/Procesador.jpg" alt="Procesador" height="220px">
         <h3>Procesador Intel Core i9</h3>
         <p>El procesador Intel Core i9 de 10ª generación ofrece un rendimiento excepcional con hasta 8 núcleos y 16 hilos de procesamiento. Ideal para tareas de alta exigencia y juegos.</p>
-        <span class="price">$399.99</span>
-        <button>Agregar al Carrito</button>
+        <span class="price">$485.99</span>
+        <button>Comprar</button>
       </div>
       <div class="product">
         <img src="Img/3060.jpg" alt="Tarjeta Gráfica" height="170px">
         <h3>Tarjeta Gráfica NVIDIA GeForce RTX 3060</h3>
         <p>La tarjeta gráfica NVIDIA GeForce RTX 3060 ofrece un poder de procesamiento gráfico excepcional con 10 GB de memoria GDDR6X. Disfruta de gráficos ultra realistas y un rendimiento sin igual en juegos y diseño.</p>
         <span class="price">$399.99</span>
-        <button>Agregar al Carrito</button>
+        <button>Comprar</button>
       </div>
       <div class="product">
         <img src="Img/Ram.jpg" alt="Memoria RAM" height="205px">
         <h3>Memoria RAM Corsair Vengeance DDR4 16GB</h3>
         <p>La memoria RAM Corsair Vengeance DDR4 de 16GB (2 x 8GB) ofrece un rendimiento excepcional y una gran capacidad para tareas multitarea intensivas y juegos de última generación.</p>
         <span class="price">$129.99</span>
-        <button>Agregar al Carrito</button>
+        <button>Comprar</button>
       </div>
       <div class="product">
         <img src="Img/ssd.jpg" alt="Disco Duro" height="205px">
         <h3>Disco Duro SSD Samsung 1TB</h3>
         <p>El disco duro SSD Samsung de 1TB ofrece una velocidad de lectura y escritura sorprendente, reduciendo los tiempos de carga y mejorando la experiencia general del sistema.</p>
         <span class="price">$179.99</span>
-        <button>Agregar al Carrito</button>
+        <button>Comprar</button>
       </div>
-      <!-- Agrega más productos aquí -->
-      
     </section>
     <h2>Productos Destacados</h2>
     <section class="product-list">
@@ -57,21 +55,21 @@
         <h3>Fuente de Poder EVGA 850W</h3>
         <p>La fuente de poder EVGA de 850W ofrece una eficiencia certificada 80 Plus Gold y una potencia estable para alimentar sistemas de alto rendimiento.</p>
         <span class="price">$159.99</span>
-        <button>Agregar al Carrito</button>
+        <button>Comprar</button>
       </div>
       <div class="product">
         <img src="Img/NZXT.jpg" alt="Gabinete" height="220px">
         <h3>Gabinete NZXT H710</h3>
         <p>El gabinete NZXT H710 ofrece un diseño elegante y funcional con amplio espacio para componentes de alta gama y una excelente gestión de cables.</p>
         <span class="price">$199.99</span>
-        <button>Agregar al Carrito</button>
+        <button>Comprar</button>
       </div>
       <div class="product">
         <img src="Img/cooler.jpg" alt="Refrigeracion liquida" height="180px">
         <h3>Cooler Master MasterLiquid</h3>
         <p>Cooler Master MasterLiquid experimente un rendimiento de refrigeración más silenciosa con un diseño mejorado en el motor interno y la carcasa para mejorar la eficiencia del enfriamiento .</p>
         <span class="price">$99.99</span>
-        <button>Agregar al Carrito</button>
+        <button>Comprar</button>
       </div>
       <div></div>
     </section>
