--- a/index.html
+++ b/index.html
@@ -21,17 +21,21 @@
     <section class="hero">
       <h2>¡Bienvenido a Componentes de PC!</h2>
       <p>Explora nuestra amplia gama de componentes de PC de última generación.</p>
-      <a href="tienda.html" class="cta-btn">Ver más</a>
+      <a href="tienda.html" class="cta-btn">Ver más...</a>
     </section>
     <section class="featured">
       <h2>Productos Destacados</h2>
       <div class="product">
-        <img src="Img/Procesador.jpg" alt="Procesador" height="200">
+        <a href="tienda.html">
+          <img src="Img/Procesador.jpg" alt="Procesador" height="200">
+        </a>
         <h3>Procesador Intel Core i9</h3>
         <p>Experimenta un rendimiento inigualable con el procesador Intel Core i9 de 10ª generación.</p>
       </div>
       <div class="product">
-        <img src="Img/Trajeta-grafica.jpeg" alt="Tarjeta Gráfica">
+        <a href="tienda.html">
+          <img src="Img/Trajeta-grafica.jpeg" alt="Tarjeta Gráfica">
+        </a>
         <h3>Tarjeta Gráfica NVIDIA GeForce RTX 3080</h3>
         <p>Disfruta de gráficos de alta calidad y una experiencia de juego inmersiva con la RTX 3080.</p>
       </div>
